test/types/range/unbounded/unboundedBool.good
unboundedBool.chpl:3: error: can't query the low bound of a range without one
