test/types/range/unbounded/unboundedBool.chpl
var empty: range(bool, BoundedRangeType.boundedNone);

writeln(empty.low);
writeln(empty.high);
writeln(empty._low);
writeln(empty._high);

var empty2: range(bool, BoundedRangeType.boundedNone);

writeln(empty2.low);
writeln(empty2.high);
writeln(empty2._low);
writeln(empty2._high);
